# NeuralEIS-Imager-Deep-Learning-and-Image-Encoding-of-Electrochemical-Impedance-Data-for-Battery-SoC

./: README.md  main.py  pyproject.toml  requirements.txt
eis2img/: __init__.py  cli.py
eis2img/data/: __init__.py  folds.py
eis2img/data/Measurements/B11/: Hk_IFR14500_SoC_100_14-03-2023_10-22.xlsx
eis2img/data/Normalized/Fold1/Test/B11/: Hk_IFR14500_SoC_100_14-03-2023_10-22.csv  Hk_IFR14500_SoC_100_26-04-2023_16-13.csv  Hk_IFR14500_SoC_10_15-03-2023_02-40.csv  Hk_IFR14500_SoC_10_27-04-2023_08-31.csv  Hk_IFR14500_SoC_15_15-03-2023_01-52.csv  Hk_IFR14500_SoC_15_27-04-2023_07-43.csv  Hk_IFR14500_SoC_20_15-03-2023_00-51.csv  Hk_IFR14500_SoC_20_27-04-2023_06-42.csv  Hk_IFR14500_SoC_25_15-03-2023_00-03.csv  Hk_IFR14500_SoC_25_27-04-2023_05-54.csv  Hk_IFR14500_SoC_30_14-03-2023_23-02.csv  Hk_IFR14500_SoC_30_27-04-2023_04-54.csv  Hk_IFR14500_SoC_35_14-03-2023_22-14.csv  Hk_IFR14500_SoC_35_27-04-2023_04-06.csv  Hk_IFR14500_SoC_40_14-03-2023_21-14.csv  Hk_IFR14500_SoC_40_27-04-2023_03-05.csv  Hk_IFR14500_SoC_45_14-03-2023_20-26.csv  Hk_IFR14500_SoC_45_27-04-2023_02-17.csv  Hk_IFR14500_SoC_50_14-03-2023_19-25.csv  Hk_IFR14500_SoC_50_27-04-2023_01-16.csv  Hk_IFR14500_SoC_55_14-03-2023_18-37.csv  (+19 more)
eis2img/models/: backbones.py  trainer.py
eis2img/pipeline/: __init__.py  encoder.py
eis2img/preprocessing/: __init__.py  normalization.py  percentile.py
eis2img/transforms/: __init__.py  gaf.py
eis2img/utils/: metrics.py
scripts/: encode_gaf.py
tests/: test_encoder_paths.py  test_gaf.py  test_normalizer_local.py  test_percentile_normalizer.py
(+380 files in other folders)
